test/log/store/vsstcb1_v_i64_m.txt
vsstcb1_v_i64_m.c:16:2: warning: multi-line comment [-Wcomment]
   16 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vsstcb1_v_i64_m.c:18:44: warning: backslash and newline separated by space
   18 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vsstcb1_v_i64_m.c:37:73: error: expected declaration specifiers or '...' before ')' token
   37 | void vsstcb1_v_i64_m_golden(uint64_t *mask,int64_t *base,int64_t *value,) {
      |                                                                         ^
vsstcb1_v_i64_m.c: In function 'main':
vsstcb1_v_i64_m.c:52:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   52 |     data_init_bool(mask, exp_mask, 8, 0xffffffffffffffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vsstcb1_v_i64_m.c:63:5: warning: implicit declaration of function 'vsstcb1_v_i64_m_golden'; did you mean 'vsstcb1_v_i64_m'? [-Wimplicit-function-declaration]
   63 |     vsstcb1_v_i64_m_golden(exp_mask,exp_base,exp_value,exp_result);
      |     ^~~~~~~~~~~~~~~~~~~~~~
      |     vsstcb1_v_i64_m
vsstcb1_v_i64_m.c:63:56: error: 'exp_result' undeclared (first use in this function)
   63 |     vsstcb1_v_i64_m_golden(exp_mask,exp_base,exp_value,exp_result);
      |                                                        ^~~~~~~~~~
vsstcb1_v_i64_m.c:63:56: note: each undeclared identifier is reported only once for each function it appears in
vsstcb1_v_i64_m.c:66:5: error: too few arguments to function 'vsstcb1_v_i64_m'
   66 |     vsstcb1_v_i64_m(mask,base,value);
      |     ^~~~~~~~~~~~~~~
In file included from vsstcb1_v_i64_m.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:896:1: note: declared here
  896 | __RUGRATS_SCATTER_STORE (i, int, 64, 8)
      | ^~~~~~~~~~~~~~~~~~~~~~~
vsstcb1_v_i64_m.c:69:9: error: 'i' undeclared (first use in this function)
   69 |     for(i=0;i<ELE_NUM;i++) {
      |         ^
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsstcb1_v_i64_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vsstcb1_v_i64_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vsstcb1_v_i64_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsstcb1_v_i64_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed